# 12go-booking-analysis

./: .gitignore  EDA_P1.html  EDA_P1.ipynb  EDA_P2.html  EDA_P2.ipynb  README.md  db.ipynb  initial_approach.ipynb  pyproject.toml
dashboard/: Home.py
dashboard/chart_builders/: __init__.py  kpi_card.py  line_chart.py
dashboard/const/: __init__.py
dashboard/pages/: 2_Channel_Performance.py  3_Service_Performance.py
queries/: tb_overview.sql
