[project]
name = "12go-booking-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "ChienLe"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib (==3.9)",
    "numpy (==2.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "duckdb (>=1.2.2,<2.0.0)",
    "streamlit (>=1.24.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
